@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-24T01:51:45Z",
+  "timestamp" : "2022-08-27T01:53:05Z",
   "count_outdated" : 117,
   "uniques_outdated" : 80,
-  "count" : 119,
-  "uniques" : 81,
+  "count" : 125,
+  "uniques" : 86,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-26T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 5 ]
     }
   ]
 }
