@@ -1,11 +1,16 @@
 {
-  "count": 2,
-  "uniques": 1,
+  "count": 8,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-26T00:00:00Z",
+      "count": 6,
+      "uniques": 5
     }
   ]
 }
