@@ -1,3 +1,11 @@
+2022-08-27T01:53:05Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2937590230
+* notice: last 14d: unq all: 5 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 81 119
+* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 86 125
+* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +5 +6 -0 -0 / 5 6
+* notice: removed / changed dates: [] / [2022-08-26]
+
 2022-08-24T01:51:45Z:
 * notice: last 14d: unq all: 1 2
 * notice: prev accum: outdated-unq outdated-all / unq all: 76 112 / 78 115
